# gbee

./: .clang-format  README.md  meson.build
include/gbee/: frame.hpp  gbee.hpp  group.hpp  helpers.hpp  meson.build  packet.hpp
tests/: frame.cpp  group.cpp  helpers.cpp  meson.build  packet.cpp
